# superclip

./: .env.example  .gitignore  CLAUDE.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  init.sql  start.sh
.github/workflows/: deploy.yml  tests.yml
backend/: .coverage  .env.example  Dockerfile  README.md  REFACTORING_GUIDE.md  pyproject.toml
backend/migrations/: 001_add_progress_fields.sql  002_add_completion_notification_fields.sql
backend/src/: admin_auth.py  ai.py  apify_youtube_downloader.py  auth_headers.py  broll.py  caption_templates.py  clip_cleanup.py  clip_editor.py  clip_source_map.py  config.py  database.py  emoji_captions.py  font_registry.py  main.py  main_refactored.py  models.py  observability.py  runtime_settings.py  video_utils.py  worker_main.py  youtube_utils.py
backend/src/repositories/: agent_repository.py  (+8 more)
backend/tests/: conftest.py  test_video_utils_diarization.py
docs/: README.md  api-reference.md  app-guide.md  architecture.md  configuration.md  development.md  personal-self-hosted-content-engine-report.md  phase-0-baseline-audit.md  phase-1-personal-mode-stripdown.md  phase-2-schema-simplification.md  project-improvement-report.md  setup.md  troubleshooting.md
frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/e2e/: app.spec.ts  global-setup.ts
frontend/prisma/: schema.prisma
mcp/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
mcp/src/supoclip_mcp/: __init__.py  client.py  config.py  server.py
(+140 files in other folders)
