[project]
name = "supoclip-mcp"
version = "0.1.0"
description = "Model Context Protocol server for SupoClip — turn long videos into viral short clips."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "SupoClip" }]
keywords = ["mcp", "supoclip", "video", "clips", "ai"]
dependencies = [
    "mcp[cli]>=1.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]

[project.scripts]
supoclip-mcp = "supoclip_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supoclip_mcp"]
